# WebPy_HW7

./: alembic.ini  config.ini  main.py  my_select.py  pyproject.toml  run_seed.py  sqlalchemy.db  test.py
database/: __init__.py  connect.py  models.py  my_select.py
irrelevant/: main.py  main_2.py
migration/versions/: f751864ca8c4_init.py  ffe14e88dda8_init.py
seeds/: __init__.py  disciplines.py  group.py  marks.py  professors.py  students.py
