[tool.poetry]
name = "webpy-hw7"
version = "0.1.0"
description = ""
authors = ["olganazarenko <113229061+olganazarenko@users.noreply.github.com>"]
readme = "README.md"
packages = [{include = "webpy_hw7"}]

[tool.poetry.dependencies]
python = "^3.10"
sqlalchemy = "^1.4.46"
faker = "^16.4.0"
alembic = "^1.9.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
